; ModuleID = '/home/carl/AnghaBench/RetroArch/bootstrap/vita/extr_threading.c_vitasdk_delete_thread_reent.c'
source_filename = "/home/carl/AnghaBench/RetroArch/bootstrap/vita/extr_threading.c_vitasdk_delete_thread_reent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_newlib_reent_mutex = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vitasdk_delete_thread_reent(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @_newlib_reent_mutex, align 4
  %5 = call i32 @sceKernelLockMutex(i32 %4, i32 1, i32* null)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @__vita_delete_thread_reent(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @_newlib_reent_mutex, align 4
  %9 = call i32 @sceKernelUnlockMutex(i32 %8, i32 1)
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i32 @sceKernelLockMutex(i32, i32, i32*) #1

declare dso_local i32 @__vita_delete_thread_reent(i32) #1

declare dso_local i32 @sceKernelUnlockMutex(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
